--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
         <url>http://144.38.203.12:8080/manager/text</url> 
         <warFile>target\spring-petclinic-1.5.1.war</warFile> 
         <path>/petclinic</path> 
-	<username>hwong</username>
+	<username>hwong1</username>
         <password>a34933363</password>
         </configuration> 
         </plugin> 
